Revert "Attempt to fix osk not shrinking content on iOS"
This reverts commit e5b2e1d0e5c15533949d298940e1c244f0cfb860.

--- a/input.css
+++ b/input.css
@@ -7,13 +7,11 @@ html {
 }
 
 html, body {
-    @apply w-dvw overflow-hidden; /* h-dvh */
-    height: var(--app-height)
+    @apply w-dvw h-dvh overflow-hidden;
 }
 
 .full-screen {
-    @apply w-dvw; /* h-dvh */
-    height: var(--app-height)
+    @apply w-dvw h-dvh;
 }
 
 /* Main Header/Subtitle & Header Bar */
